setup grid and started adding in photos. created json object

--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
 
 <body>
     <b-container id="root" fluid>
-        <h2>{{ test }}</h2>
+        <h2> {{ test }}</h2>
+        <div id="filters-container">
+            <!--Insert filter menu here-->
+        </div>
+        <div id="portfolio-section">
+            
+        </div>
     </b-container>
 
     <!---scripts-->
