Created and added component for portfolios

--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
 
 <body>
     <b-container id="root" fluid>
-        <h2> {{ test }}</h2>
         <div id="filters-container">
             <!--Insert filter menu here-->
         </div>
         <div id="portfolio-section">
-            
+            <div v-for="portfolio in portfolios">
+                <portfolio-slat :pfp="portfolio.pfp" :major="portfolio.major" :name="portfolio.name" :blurb="portfolio.blurb" :chips="portfolio.chips" :photo1="portfolio.photo1" :photo2="portfolio.photo2"></portfolio-slat>
+            </div>
         </div>
     </b-container>
 
