initial styles for portfolio slat

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div id="portfolio-section">
             <div v-for="portfolio in portfolios">
-                <portfolio-slat :pfp="portfolio.pfp" :major="portfolio.major" :name="portfolio.name" :blurb="portfolio.blurb" :chips="portfolio.chips" :photo1="portfolio.photo1" :photo2="portfolio.photo2"></portfolio-slat>
+                <portfolio-slat :pfp="portfolio.pfp" :major="portfolio.major" :name="portfolio.name" :blurb="portfolio.blurb" :chips="portfolio.chips" :photo1="portfolio.photo1" :photo2="portfolio.photo2" :link="portfolio.link"></portfolio-slat>
             </div>
         </div>
     </b-container>
