--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <portfolio-slat :pfp="portfolio.pfp" :major="portfolio.major" :name="portfolio.name" :blurb="portfolio.blurb" :chips="portfolio.chips" :photo1="portfolio.photo1" :photo2="portfolio.photo2" :link="portfolio.link"></portfolio-slat>
             </div>
         </div>
+        <!--demo-->
     </b-container>
 
     <!---scripts-->
