--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <!-- JQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     
+      <!--Link for Font awesome icons-->  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
+
+    
     <title>RIT Portfolios - Rework</title>
 
 </head>
@@ -59,8 +63,8 @@
                     <b-form-input id="input-1" v-model="major" required
                         placeholder="Enter with the format '[number] year [Major] (BFA, BS, etc.)'"></b-form-input>
                     <b-button type="submit" variant="primary">Submit</b-button>
+                </b-form-group>
             </b-form>
-
         </div>
     </b-container>
 
